--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = False
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:statikos/__init__.py]
+[bumpversion:file:dwolla/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
