--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 1.0.0
 commit = True
 tag = False
 
@@ -17,22 +17,23 @@ parallel = True
 source = dwolla
 
 [coverage:report]
-exclude_lines =
-    if __name__ == .__main__.:
-    pragma: no cover
+exclude_lines = 
+	if __name__ == .__main__.:
+	pragma: no cover
 fail_under = 100
 
 [nosetests]
-cover-erase=true
-cover-html=true
-cover-min-percentage=100
-cover-package=dwolla
-doctest-options=+ELLIPSIS,+NORMALIZE_WHITESPACE
-logging-clear-handlers=true
-with-coverage=true
-with-doctest=true
+cover-erase = true
+cover-html = true
+cover-min-percentage = 100
+cover-package = dwolla
+doctest-options = +ELLIPSIS,+NORMALIZE_WHITESPACE
+logging-clear-handlers = true
+with-coverage = true
+with-doctest = true
 
 [pydocstyle]
-add_select=D213,D404
-ignore=D203,D212,D301
-match_dir=dwolla
+add_select = D213,D404
+ignore = D203,D212,D301
+match_dir = dwolla
+
