Update setup.cfg; update unit tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,13 +11,17 @@ replace = version='{new_version}'
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
+[bumpversion:file:dwolla/test/test_cli.py]
+search = self.assertEqual('Dwolla {current_version}\n', result.output)
+replace = self.assertEqual('Dwolla {new_version}\n', result.output)
+
 [coverage:run]
 branch = True
 parallel = True
 source = dwolla
 
 [coverage:report]
-exclude_lines = 
+exclude_lines =
 	if __name__ == .__main__.:
 	pragma: no cover
 fail_under = 100
