--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,13 +1,13 @@
-bumpversion==0.5.3
-codecov==2.0.15
-coverage==4.5.2
-flake8==3.5.0
-isort==4.3.4
-mccabe==0.6.1
-nose==1.3.7
-pycodestyle==2.3.1
-pydocstyle==3.0.0
-pyflakes==1.6.0
-yapf==0.24.0
+bumpversion==0.6.0
+coverage==7.6.7
+flake8==7.1.1
+isort==5.13.2
+mccabe==0.7.0
+pycodestyle==2.12.1
+pydocstyle==6.3.0
+pyflakes==3.2.0
+pytest==8.3.3
+setuptools==75.5.0
+yapf==0.43.0
 
 -r requirements.txt
